--- a/Course/csharp-example/csharp-example/csharp-example.csproj
+++ b/Course/csharp-example/csharp-example/csharp-example.csproj
@@ -60,6 +60,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminMenu.cs" />
+    <Compile Include="DuckStickerCheck.cs" />
     <Compile Include="LoginAdmin.cs" />
     <Compile Include="MyFirstTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
