--- a/Course/csharp-example/csharp-example/csharp-example.csproj
+++ b/Course/csharp-example/csharp-example/csharp-example.csproj
@@ -61,7 +61,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminMenu.cs" />
+    <Compile Include="DuckPriceCheckFirefox.cs" />
+    <Compile Include="DuckPriceCheckChrome.cs" />
     <Compile Include="DuckStickerCheck.cs" />
+    <Compile Include="CountrySorting.cs" />
     <Compile Include="LoginAdmin.cs" />
     <Compile Include="MyFirstTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
