--- a/Course/csharp-example/csharp-example/csharp-example.csproj
+++ b/Course/csharp-example/csharp-example/csharp-example.csproj
@@ -63,6 +63,7 @@
     <Compile Include="AdminMenu.cs" />
     <Compile Include="DuckPriceCheckFirefox.cs" />
     <Compile Include="DuckPriceCheckChrome.cs" />
+    <Compile Include="AddToCartCheck.cs" />
     <Compile Include="NewProductCreation.cs" />
     <Compile Include="UserRegistration.cs" />
     <Compile Include="DuckStickerCheck.cs" />
