--- a/Course/csharp-example/csharp-example/csharp-example.csproj
+++ b/Course/csharp-example/csharp-example/csharp-example.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminMenu.cs" />
+    <Compile Include="GeoZonesSorting.cs" />
     <Compile Include="DuckPriceCheckFirefox.cs" />
     <Compile Include="DuckPriceCheckChrome.cs" />
     <Compile Include="AddToCartCheck.cs" />
